[gd_scene load_steps=8 format=3 uid="uid://d2j8i8j550uqd"]

[ext_resource type="Script" path="res://Scenes/levels.gd" id="1_jn1n0"]
[ext_resource type="PackedScene" uid="uid://b6b210jiwgkxb" path="res://Scenes/Asset Scenes/background.tscn" id="2_bf0pv"]
[ext_resource type="Texture2D" uid="uid://bg7c5e8aru3g4" path="res://Assets/Assets.png" id="2_roehg"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5g3tw"]
texture = ExtResource("2_roehg")
0:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/next_alternative_id = 2
9:0/0 = 0
9:0/1 = 1
9:0/1/flip_v = true
9:0/1/transpose = true
10:0/next_alternative_id = 2
10:0/0 = 0
10:0/1 = 1
10:0/1/flip_v = true
10:0/1/transpose = true
11:0/next_alternative_id = 2
11:0/0 = 0
11:0/1 = 1
11:0/1/flip_v = true
11:0/1/transpose = true
12:0/next_alternative_id = 3
12:0/0 = 0
12:0/2 = 2
12:0/2/flip_v = true
12:0/2/transpose = true
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/next_alternative_id = 2
9:1/0 = 0
9:1/1 = 1
9:1/1/flip_v = true
9:1/1/transpose = true
10:1/next_alternative_id = 2
10:1/0 = 0
10:1/1 = 1
10:1/1/flip_v = true
10:1/1/transpose = true
11:1/next_alternative_id = 2
11:1/0 = 0
11:1/1 = 1
11:1/1/flip_v = true
11:1/1/transpose = true
12:1/next_alternative_id = 3
12:1/0 = 0
12:1/2 = 2
12:1/2/flip_v = true
12:1/2/transpose = true
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/next_alternative_id = 2
9:2/0 = 0
9:2/1 = 1
9:2/1/flip_v = true
9:2/1/transpose = true
10:2/next_alternative_id = 2
10:2/0 = 0
10:2/1 = 1
10:2/1/flip_v = true
10:2/1/transpose = true
11:2/next_alternative_id = 2
11:2/0 = 0
11:2/1 = 1
11:2/1/flip_v = true
11:2/1/transpose = true
12:2/next_alternative_id = 3
12:2/0 = 0
12:2/2 = 2
12:2/2/flip_v = true
12:2/2/transpose = true
14:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
5:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
5:8/0 = 0
7:8/0 = 0
8:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0

[sub_resource type="TileSet" id="TileSet_t70jt"]
sources/0 = SubResource("TileSetAtlasSource_5g3tw")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mn0op"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_duwuw"]

[node name="Levels" type="Node2D"]
script = ExtResource("1_jn1n0")

[node name="Background" parent="." instance=ExtResource("2_bf0pv")]

[node name="TilesBack" type="TileMap" parent="."]
tile_set = SubResource("TileSet_t70jt")
format = 2
layer_0/tile_data = PackedInt32Array(65536, 65536, 2, 131072, 65536, 2, 196608, 65536, 2, 262144, 65536, 2, 327680, 65536, 2, 393216, 65536, 2, 458752, 65536, 2, 524288, 65536, 2, 589824, 65536, 2, 655360, 65536, 2, 720896, 65536, 2, 786432, 65536, 2, 851968, 65536, 2, 917504, 65536, 2, 983040, 65536, 2, 1048576, 65536, 2, 1114112, 65536, 2, 1179648, 65536, 2, 1245184, 65536, 2, 1310720, 65536, 2, 1376256, 65536, 2, 1441792, 65536, 2, 1507328, 65536, 2, 1572864, 65536, 2, 1638400, 65536, 2, 1703936, 65536, 2, 1769472, 65536, 2, 1835008, 65536, 2, 1900544, 65536, 2, 1966080, 65536, 2, 2031616, 65536, 2, 2097152, 65536, 2, 2162688, 65536, 2, 2228224, 65536, 2, 2293760, 65536, 2, 2359296, 65536, 2, 2424832, 65536, 2, 2490368, 65536, 2, 2555904, 65536, 2, 2621440, 65536, 2, 2686976, 65536, 2, 2752512, 65536, 2, 2818048, 65536, 2, 2883585, 196608, 4, 2883586, 196608, 4, 2883587, 196608, 4, 2883588, 196608, 4, 2883589, 196608, 4, 2883590, 196608, 4, 2883591, 196608, 4, 2883592, 196608, 4, 2883593, 196608, 4, 2883594, 196608, 4, 2883595, 196608, 4, 2883596, 196608, 4, 2883597, 196608, 4, 2883598, 196608, 4, 2883599, 196608, 4, 2883600, 196608, 4, 2883601, 196608, 4, 2883602, 196608, 4, 2883603, 196608, 4, 2883604, 196608, 4, 2883605, 196608, 4, 2883606, 196608, 4, 2883607, 196608, 4, 2883608, 196608, 4, 2883609, 196608, 4, 2883610, 196608, 4, 2883611, 196608, 4, 2883612, 196608, 4, 2883613, 196608, 4, 2883614, 196608, 4, 2883615, 196608, 4, 2883616, 196608, 4, 2883617, 196608, 4, 2883618, 196608, 4, 2883619, 196608, 4, 2883620, 196608, 4, 2883621, 196608, 4, 2883622, 196608, 4, 2883623, 196608, 4, 2883624, 196608, 4, 2883625, 196608, 4, 2883626, 196608, 4, 2883627, 196608, 4, 2883628, 196608, 4, 2883629, 196608, 4, 2883630, 196608, 4, 2883631, 196608, 4, 2883632, 196608, 4, 2883633, 196608, 4, 2883634, 196608, 4, 2883635, 196608, 4, 2883636, 196608, 4, 2883637, 196608, 4, 2883638, 196608, 4, 2883639, 196608, 4, 2883640, 196608, 4, 2883641, 196608, 4, 2883642, 196608, 4, 2883643, 196608, 4, 2883644, 196608, 4, 2883645, 196608, 4, 2883646, 196608, 4, 2883647, 196608, 4, 2883648, 196608, 4, 2883649, 196608, 4, 2883650, 196608, 4, 2883651, 196608, 4, 2883652, 196608, 4, 2883653, 196608, 4, 2883654, 196608, 4, 2883655, 196608, 4, 2883656, 196608, 4, 2883657, 196608, 4, 2883658, 196608, 4, 2883659, 196608, 4, 2883660, 196608, 4, 2883661, 196608, 4, 2883662, 196608, 4, 2818127, 327680, 2, 2752591, 327680, 2, 2687055, 327680, 2, 2621519, 327680, 2, 2555983, 327680, 2, 2490447, 327680, 2, 2424911, 327680, 2, 2359375, 327680, 2, 2293839, 327680, 2, 2228303, 327680, 2, 2162767, 327680, 2, 2097231, 327680, 2, 2031695, 327680, 2, 1966159, 327680, 2, 1900623, 327680, 2, 1835087, 327680, 2, 1769551, 327680, 2, 1704015, 327680, 2, 1638479, 327680, 2, 1572943, 327680, 2, 1507407, 327680, 2, 1441871, 327680, 2, 1376335, 327680, 2, 1310799, 327680, 2, 1245263, 327680, 2, 1179727, 327680, 2, 1114191, 327680, 2, 1048655, 327680, 2, 983119, 327680, 2, 917583, 327680, 2, 852047, 327680, 2, 786511, 327680, 2, 720975, 327680, 2, 655439, 327680, 2, 589903, 327680, 2, 524367, 327680, 2, 458831, 327680, 2, 393295, 327680, 2, 327759, 327680, 2, 262223, 327680, 2, 196687, 327680, 2, 131151, 327680, 2, 65615, 327680, 2, 78, 196608, 0, 77, 196608, 0, 76, 196608, 0, 75, 196608, 0, 74, 196608, 0, 73, 196608, 0, 72, 196608, 0, 71, 196608, 0, 70, 196608, 0, 69, 196608, 0, 68, 196608, 0, 67, 196608, 0, 66, 196608, 0, 65, 196608, 0, 64, 196608, 0, 63, 196608, 0, 62, 196608, 0, 61, 196608, 0, 60, 196608, 0, 59, 196608, 0, 58, 196608, 0, 57, 196608, 0, 56, 196608, 0, 55, 196608, 0, 54, 196608, 0, 53, 196608, 0, 52, 196608, 0, 51, 196608, 0, 50, 196608, 0, 49, 196608, 0, 48, 196608, 0, 47, 196608, 0, 46, 196608, 0, 45, 196608, 0, 44, 196608, 0, 43, 196608, 0, 42, 196608, 0, 41, 196608, 0, 40, 196608, 0, 39, 196608, 0, 38, 196608, 0, 37, 196608, 0, 36, 196608, 0, 35, 196608, 0, 34, 196608, 0, 33, 196608, 0, 32, 196608, 0, 31, 196608, 0, 30, 196608, 0, 29, 196608, 0, 28, 196608, 0, 27, 196608, 0, 26, 196608, 0, 25, 196608, 0, 24, 196608, 0, 23, 196608, 0, 22, 196608, 0, 21, 196608, 0, 20, 196608, 0, 19, 196608, 0, 18, 196608, 0, 17, 196608, 0, 16, 196608, 0, 15, 196608, 0, 14, 196608, 0, 13, 196608, 0, 12, 196608, 0, 11, 196608, 0, 10, 196608, 0, 9, 196608, 0, 8, 196608, 0, 7, 196608, 0, 6, 196608, 0, 5, 196608, 0, 4, 196608, 0, 3, 196608, 0, 2, 196608, 0, 1, 196608, 0, 0, 131072, 1, 2883584, 131072, 3, 2883663, 262144, 3, 79, 262144, 1, 65539, 655360, 0, 131075, 655360, 1, 196611, 655360, 2, 262147, 655360, 0, 327683, 655360, 1, 393219, 655360, 2, 458755, 655360, 0, 524291, 655360, 1, 589827, 655360, 2, 655363, 655360, 0, 720899, 655360, 1, 786435, 655360, 2, 851971, 655360, 0, 917507, 655360, 1, 983043, 655360, 2, 1048579, 655360, 0, 1114115, 655360, 1, 1179651, 655360, 2, 1245187, 655360, 0, 1310723, 655360, 1, 1376259, 655360, 2, 1441795, 655360, 0, 1507331, 655360, 1, 1572867, 655360, 2, 1638403, 655360, 0, 1703939, 655360, 1, 1769475, 655360, 2, 1835011, 655360, 0, 1900547, 655360, 1, 1966083, 655360, 2, 2031619, 655360, 0, 2097155, 655360, 1, 2162691, 655360, 2, 2228227, 655360, 0, 2293763, 655360, 1, 2359299, 655360, 2, 2424835, 655360, 0, 2490371, 655360, 1, 2555907, 655360, 2, 2621443, 655360, 0, 2686979, 655360, 0, 2752515, 655360, 1, 2818051, 655360, 2, 65546, 655360, 0, 131082, 655360, 1, 196618, 655360, 2, 262154, 655360, 0, 327690, 655360, 1, 393226, 655360, 2, 524304, 655360, 0, 589840, 655360, 1, 655376, 655360, 2, 327696, 655360, 0, 393232, 655360, 1, 458768, 655360, 2, 131088, 655360, 1, 196624, 655360, 2, 262160, 655360, 2, 65552, 655360, 0, 720912, 655360, 0, 786448, 655360, 1, 851984, 655360, 2, 917520, 655360, 0, 983056, 655360, 1, 1048592, 655360, 2, 1114128, 655360, 0, 1179664, 655360, 1, 1245200, 655360, 2, 1310736, 655360, 0, 1376272, 655360, 1, 1441808, 655360, 2, 1507344, 655360, 0, 1572880, 655360, 1, 1638416, 655360, 2, 1703952, 655360, 0, 1769488, 655360, 1, 1835024, 655360, 2, 1900560, 655360, 0, 1966096, 655360, 1, 2031632, 655360, 2, 2097168, 655360, 0, 2162704, 655360, 1, 2228240, 655360, 2, 2293776, 655360, 0, 2359312, 655360, 1, 2424848, 655360, 2, 2490384, 655360, 0, 2555920, 655360, 1, 2621456, 655360, 2, 2686992, 655360, 0, 2752528, 655360, 1, 2818064, 655360, 2, 65554, 655360, 0, 131090, 655360, 1, 196626, 655360, 2, 262162, 655360, 0, 327698, 655360, 1, 393234, 655360, 2, 458770, 655360, 0, 524306, 655360, 1, 589842, 655360, 2, 655378, 655360, 0, 720914, 655360, 1, 786450, 655360, 2, 851986, 655360, 0, 917522, 655360, 1, 983058, 655360, 2, 1048594, 655360, 0, 1114130, 655360, 1, 1179666, 655360, 2, 1245202, 655360, 0, 1310738, 655360, 1, 1376274, 655360, 2, 1441810, 655360, 0, 1507346, 655360, 1, 1572882, 655360, 2, 1638418, 655360, 0, 1703954, 655360, 1, 1769490, 655360, 2, 1835026, 655360, 0, 1900562, 655360, 1, 1966098, 655360, 2, 2031634, 655360, 0, 2097170, 655360, 1, 2162706, 655360, 2, 2228242, 655360, 0, 2293778, 655360, 0, 2359314, 655360, 1, 2424850, 655360, 2, 2490386, 655360, 0, 2555922, 655360, 1, 2686994, 655360, 0, 2752530, 655360, 1, 2818066, 655360, 2, 2621458, 655360, 2, 589855, 655360, 2, 655391, 655360, 1, 720927, 655360, 2, 65567, 655360, 0, 131103, 655360, 1, 196639, 655360, 2, 262175, 655360, 0, 327711, 655360, 1, 393247, 655360, 2, 458783, 655360, 0, 524319, 655360, 1, 786463, 655360, 0, 851999, 655360, 1, 917535, 655360, 2, 983071, 655360, 0, 1048607, 655360, 1, 1114143, 655360, 2, 1179679, 655360, 0, 1245215, 655360, 1, 1310751, 655360, 2, 1376287, 655360, 0, 1441823, 655360, 1, 1507359, 655360, 2, 1572895, 655360, 0, 1638431, 655360, 1, 1703967, 655360, 2, 1769503, 655360, 0, 1835039, 655360, 1, 1900575, 655360, 2, 1966111, 655360, 0, 2031647, 655360, 1, 2097183, 655360, 2, 2162719, 655360, 0, 2228255, 655360, 1, 2293791, 655360, 2, 2359327, 655360, 0, 2424863, 655360, 1, 2490399, 655360, 2, 2555935, 655360, 0, 2621471, 655360, 1, 2687007, 655360, 0, 2752543, 655360, 1, 2818079, 655360, 2, 65569, 655360, 0, 131105, 655360, 1, 196641, 655360, 2, 262177, 655360, 0, 327713, 655360, 1, 393249, 655360, 2, 65582, 655360, 0, 131118, 655360, 1, 196654, 655360, 2, 262190, 655360, 0, 327726, 655360, 1, 393262, 655360, 2, 524293, 589824, 65537, 524298, 589824, 65537, 524309, 589824, 65537, 524314, 589824, 65537, 786453, 589824, 65537, 786457, 589824, 65537, 786461, 589824, 65537, 786446, 589824, 65537, 786441, 589824, 65537, 786438, 589824, 65537, 524292, 589824, 65538, 524294, 589824, 65538, 524295, 589824, 65538, 524296, 589824, 65538, 524297, 589824, 65538, 524299, 589824, 65538, 524300, 589824, 65538, 524301, 589824, 65538, 524302, 589824, 65538, 524303, 589824, 65538, 524305, 589824, 65538, 524307, 589824, 65538, 524308, 589824, 65538, 524310, 589824, 65538, 524311, 589824, 65538, 524312, 589824, 65538, 524313, 589824, 65538, 524315, 589824, 65538, 524316, 589824, 65538, 524317, 589824, 65538, 524318, 589824, 65538, 524320, 589824, 65538, 524321, 589824, 65538, 524322, 589824, 65538, 524323, 589824, 65538, 524324, 589824, 65538, 524325, 589824, 65538, 524326, 589824, 65538, 524327, 589824, 65538, 524328, 589824, 65538, 524329, 589824, 65538, 524330, 589824, 65538, 524331, 589824, 65538, 524332, 589824, 65538, 524333, 589824, 65538, 524334, 589824, 65538, 524335, 589824, 65538, 524336, 655360, 1, 524337, 589824, 65538, 524338, 589824, 65538, 524339, 589824, 65538, 524340, 589824, 65538, 524341, 589824, 65538, 524342, 589824, 65538, 524343, 589824, 65538, 524344, 589824, 65538, 524345, 589824, 65538, 524346, 589824, 65538, 524347, 589824, 65538, 524348, 589824, 65538, 524349, 720896, 1, 524350, 589824, 65538, 524351, 589824, 65538, 524352, 589824, 65538, 524353, 589824, 65538, 524354, 589824, 65538, 524355, 589824, 65538, 524356, 589824, 65538, 524357, 589824, 65538, 524358, 589824, 65538, 524359, 589824, 65538, 524360, 589824, 65538, 524361, 589824, 65538, 524362, 589824, 65538, 524363, 589824, 65538, 524364, 589824, 65538, 524365, 589824, 65538, 524366, 589824, 65538, 786436, 589824, 65538, 786437, 589824, 65538, 786440, 589824, 65538, 786439, 589824, 65538, 786442, 589824, 65538, 786443, 589824, 65538, 786444, 589824, 65538, 786445, 589824, 65538, 786447, 589824, 65538, 786449, 589824, 65538, 786451, 589824, 65538, 786452, 589824, 65538, 786454, 589824, 65538, 786455, 589824, 65538, 786456, 589824, 65538, 786458, 589824, 65538, 786459, 589824, 65538, 786460, 589824, 65538, 786462, 589824, 65538, 786464, 589824, 65538, 786465, 589824, 65538, 786466, 589824, 65538, 786467, 589824, 65538, 786468, 589824, 65538, 786469, 589824, 65538, 786470, 589824, 65538, 786471, 589824, 65538, 786472, 589824, 65538, 786473, 589824, 65538, 786474, 589824, 65538, 786475, 589824, 65538, 786476, 589824, 65538, 786477, 589824, 65538, 786478, 589824, 65538, 786479, 589824, 65538, 786480, 655360, 2, 786481, 589824, 65538, 786482, 589824, 65538, 786483, 589824, 65538, 786484, 589824, 65538, 786485, 589824, 65538, 786486, 589824, 65538, 786487, 589824, 65538, 786488, 589824, 65538, 786489, 589824, 65538, 786490, 589824, 65538, 786491, 589824, 65538, 786492, 589824, 65538, 786493, 720896, 2, 786494, 589824, 65538, 786495, 589824, 65538, 786496, 589824, 65538, 786497, 589824, 65538, 786498, 589824, 65538, 786499, 589824, 65538, 786500, 589824, 65538, 786501, 589824, 65538, 786502, 589824, 65538, 786503, 589824, 65538, 786504, 589824, 65538, 786505, 589824, 65538, 786506, 589824, 65538, 786507, 589824, 65538, 786508, 589824, 65538, 786509, 589824, 65538, 786510, 589824, 65538, 65540, 589824, 65538, 65541, 589824, 65538, 65542, 589824, 65538, 65543, 589824, 65538, 65544, 589824, 65538, 65545, 589824, 65538, 327684, 589824, 65538, 327685, 589824, 65538, 327686, 589824, 65538, 327687, 589824, 65538, 327688, 589824, 65538, 327689, 589824, 65538, 131106, 589824, 65538, 131107, 589824, 65538, 131108, 589824, 65538, 131109, 589824, 65538, 131110, 589824, 65538, 131111, 589824, 65538, 131112, 589824, 65538, 131113, 589824, 65538, 131114, 589824, 65538, 131115, 589824, 65538, 131116, 589824, 65538, 131117, 589824, 65538, 393261, 589824, 65538, 393260, 589824, 65538, 393259, 589824, 65538, 393258, 589824, 65538, 393257, 589824, 65538, 393256, 589824, 65538, 393255, 589824, 65538, 393254, 589824, 65538, 393253, 589824, 65538, 393252, 589824, 65538, 393251, 589824, 65538, 393250, 589824, 65538, 458785, 786432, 0, 458798, 786432, 0, 458762, 786432, 0, 589828, 655360, 7, 589843, 655360, 7, 393220, 655360, 7, 458786, 655360, 7, 589856, 655360, 7, 589839, 458752, 7, 589854, 458752, 7, 458797, 458752, 7, 393225, 458752, 7, 65584, 655360, 0, 131120, 655360, 1, 196656, 655360, 2, 262192, 655360, 0, 327728, 655360, 1, 393264, 655360, 2, 458800, 655360, 0, 589872, 655360, 2, 655408, 655360, 0, 720944, 655360, 1, 852016, 655360, 0, 917552, 655360, 1, 983088, 655360, 2, 1048624, 655360, 0, 1114160, 655360, 1, 1179696, 655360, 2, 1245232, 655360, 0, 1310768, 655360, 1, 1376304, 655360, 2, 1441840, 655360, 0, 1507376, 655360, 1, 1572912, 655360, 2, 1638448, 655360, 0, 1703984, 655360, 1, 1769520, 655360, 2, 1835056, 655360, 0, 1900592, 655360, 1, 1966128, 655360, 2, 2031664, 655360, 0, 2097200, 655360, 1, 2162736, 655360, 2, 2228272, 655360, 0, 2293808, 655360, 1, 2359344, 655360, 2, 2424880, 655360, 0, 2490416, 655360, 1, 2555952, 655360, 2, 2621488, 655360, 0, 2687024, 655360, 0, 2752560, 655360, 1, 2818096, 655360, 2, 589871, 458752, 7, 65597, 655360, 0, 131133, 655360, 1, 196669, 655360, 2, 65609, 655360, 0, 131145, 655360, 1, 196681, 655360, 2, 262205, 720896, 0, 327741, 720896, 1, 393277, 720896, 2, 458813, 720896, 0, 589885, 720896, 2, 655421, 720896, 0, 720957, 720896, 1, 852029, 720896, 0, 917565, 720896, 1, 983101, 720896, 2, 1048637, 720896, 0, 1114173, 720896, 1, 1179709, 720896, 2, 1245245, 720896, 0, 1310781, 720896, 1, 1376317, 720896, 2, 1441853, 720896, 0, 1507389, 720896, 1, 1572925, 720896, 2, 1638461, 720896, 0, 1703997, 720896, 1, 1769533, 720896, 2, 1835069, 720896, 0, 1900605, 720896, 1, 1966141, 720896, 2, 2031677, 720896, 0, 2097213, 720896, 1, 2162749, 720896, 2, 2228285, 720896, 0, 2293821, 720896, 1, 2359357, 720896, 2, 2424893, 720896, 0, 2490429, 720896, 1, 2555965, 720896, 2, 2621501, 720896, 0, 2687037, 720896, 0, 2752573, 720896, 1, 2818109, 720896, 2, 589884, 458752, 7, 589873, 655360, 7)

[node name="LevelsMenu" type="CanvasLayer" parent="."]

[node name="LevelsLabel" type="Label" parent="LevelsMenu"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.0
offset_top = 26.0
offset_right = 96.0
offset_bottom = 112.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.454902, 0, 0.588235, 1)
theme_override_font_sizes/font_size = 60
text = "Levels"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="LevelsMenu"]
offset_left = 64.0
offset_top = 31.0
offset_right = 160.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_pressed_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_hover_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_focus_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_hover_pressed_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_disabled_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_outline_color = Color(0.454902, 0, 0.588235, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_mn0op")
theme_override_styles/hover = SubResource("StyleBoxEmpty_mn0op")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mn0op")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mn0op")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mn0op")
text = "Back"

[node name="LevelOne" type="Button" parent="LevelsMenu"]
offset_left = 64.0
offset_top = 144.0
offset_right = 256.0
offset_bottom = 192.0
theme_override_colors/font_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_pressed_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_hover_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_focus_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_hover_pressed_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_disabled_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_outline_color = Color(0.454902, 0, 0.588235, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_duwuw")
theme_override_styles/hover = SubResource("StyleBoxEmpty_duwuw")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_duwuw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_duwuw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_duwuw")
text = "Level One"

[node name="LevelTwo" type="Button" parent="LevelsMenu"]
offset_left = 304.0
offset_top = 144.0
offset_right = 496.0
offset_bottom = 192.0
theme_override_colors/font_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_pressed_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_hover_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_focus_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_hover_pressed_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_disabled_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_outline_color = Color(0.454902, 0, 0.588235, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_duwuw")
theme_override_styles/hover = SubResource("StyleBoxEmpty_duwuw")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_duwuw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_duwuw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_duwuw")
text = "Level Two"

[node name="LevelThree" type="Button" parent="LevelsMenu"]
offset_left = 512.0
offset_top = 144.0
offset_right = 768.0
offset_bottom = 192.0
theme_override_colors/font_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_pressed_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_hover_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_focus_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_hover_pressed_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_disabled_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_outline_color = Color(0.454902, 0, 0.588235, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_duwuw")
theme_override_styles/hover = SubResource("StyleBoxEmpty_duwuw")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_duwuw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_duwuw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_duwuw")
text = "Level Three"

[node name="LevelFour" type="Button" parent="LevelsMenu"]
offset_left = 784.0
offset_top = 144.0
offset_right = 976.0
offset_bottom = 192.0
theme_override_colors/font_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_pressed_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_hover_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_focus_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_hover_pressed_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_disabled_color = Color(0.454902, 0, 0.588235, 1)
theme_override_colors/font_outline_color = Color(0.454902, 0, 0.588235, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_duwuw")
theme_override_styles/hover = SubResource("StyleBoxEmpty_duwuw")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_duwuw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_duwuw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_duwuw")
text = "Level Four"

[connection signal="pressed" from="LevelsMenu/Back" to="." method="_on_back_pressed" flags=18]
[connection signal="pressed" from="LevelsMenu/LevelOne" to="." method="_on_button_2_pressed" flags=18]
[connection signal="pressed" from="LevelsMenu/LevelTwo" to="." method="_on_level_two_pressed" flags=18]
[connection signal="pressed" from="LevelsMenu/LevelThree" to="." method="_on_level_three_pressed"]
[connection signal="pressed" from="LevelsMenu/LevelFour" to="." method="_on_level_four_pressed"]
